# customer-intelligence

./: .gitignore  README.md  pyproject.toml
data/: README.md
docs/: customer_360.md  customer_scoring.md  data_contracts.md  data_feasibility.md
scripts/: audit_crm_sales.py  audit_customer_360.py  audit_online_retail.py  build_crm_interim.py  build_customer_360.py  build_customer_scoring.py  build_retail_interim.py
src/customer_intelligence/: __init__.py
src/customer_intelligence/data/: crm.py  crm_dataset.py  crm_references.py  retail.py  retail_io.py
src/customer_intelligence/features/: customer.py
src/customer_intelligence/scoring/: rfm.py  segments.py
tests/: test_crm.py  test_crm_dataset.py  test_crm_references.py  test_customer_features.py  test_package.py  test_retail.py  test_retail_io.py  test_rfm.py  test_segments.py
