[project]
name = "customer-intelligence"
version = "0.1.0"
description = "Customer scoring, churn prediction and sales forecasting"
readme = "README.md"
requires-python = ">=3.14,<3.15"
dependencies = [
    "numpy>=2.3.3,<3",
    "openpyxl>=3.1.5,<4",
    "pandas>=3.0.3,<4",
    "pyarrow>=25,<26",
    "scikit-learn>=1.9,<2",
]
[project.optional-dependencies]
dev = [
    "ipykernel>=7.3,<8",
    "matplotlib>=3.11,<4",
    "pytest>=9,<10",
    "ruff>=0.14,<1",
]